fix to two-way communication

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
   const socket = io('http://localhost:8080');
+  // receive
   socket.on('news', (data) => {
     console.log(data);
-    socket.emit('my other event', { my: 'data' });
   });
+  // send
+  socket.emit('chat', { my: 'data' });
 </script>
